changes/3.14/ac550511ad4be446847be94f86708ca0d3e4691d
staging/lustre: fix build error on i386-randconfig

kbuild test robot reported:

All error/warnings:

   In file included from drivers/staging/lustre/lustre/llite/llite_internal.h:41:0,
                    from drivers/staging/lustre/lustre/llite/dcache.c:48:
>> drivers/staging/lustre/lustre/llite/../include/lustre_disk.h:499:28: error: field 'lsi_bdi' has incomplete type
     struct backing_dev_info   lsi_bdi;     /* each client mountpoint needs
                               ^
--
   In file included from drivers/staging/lustre/lustre/llite/llite_lib.c:51:0:
>> drivers/staging/lustre/lustre/llite/../include/lustre_disk.h:499:28: error: field 'lsi_bdi' has incomplete type
     struct backing_dev_info   lsi_bdi;     /* each client mountpoint needs
                               ^
   drivers/staging/lustre/lustre/llite/llite_lib.c: In function 'll_bdi_register':
>> drivers/staging/lustre/lustre/llite/llite_lib.c:953:5: error: dereferencing pointer to incomplete type
     bdi->name = "lustre";
        ^
>> drivers/staging/lustre/lustre/llite/llite_lib.c:954:2: error: implicit declaration of function 'bdi_register' [-Werror=implicit-function-declaration]
     return bdi_register(bdi, NULL, "lustre-%d",
     ^
   drivers/staging/lustre/lustre/llite/llite_lib.c: In function 'll_fill_super':
>> drivers/staging/lustre/lustre/llite/llite_lib.c:990:2: error: implicit declaration of function 'bdi_init' [-Werror=implicit-function-declaration]
     err = bdi_init(&lsi->lsi_bdi);
     ^
>> drivers/staging/lustre/lustre/llite/llite_lib.c:994:30: error: 'BDI_CAP_MAP_COPY' undeclared (first use in this function)
     lsi->lsi_bdi.capabilities = BDI_CAP_MAP_COPY;
                                 ^
   drivers/staging/lustre/lustre/llite/llite_lib.c:994:30: note: each undeclared identifier is reported only once for each function it appears in
   drivers/staging/lustre/lustre/llite/llite_lib.c: In function 'll_put_super':
>> drivers/staging/lustre/lustre/llite/llite_lib.c:1101:3: error: implicit declaration of function 'bdi_destroy' [-Werror=implicit-function-declaration]
      bdi_destroy(&lsi->lsi_bdi);
      ^
   cc1: some warnings being treated as errors

Reported-by: Fengguang Wu <fengguang.wu@intel.com>
Cc: Andreas Dilger <andreas.dilger@intel.com>
Signed-off-by: Peng Tao <bergwolf@gmail.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

